--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
