--- a/index.html
+++ b/index.html
@@ -1,9 +1,105 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <script src="./js/main.js" type="module"></script>
-  </body>
+	<head>
+		<title>Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+		<div id="wrapper" class="divided">
+
+			<!-- One -->
+			<section class="banner color1 invert style3 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
+				<div class="content">
+					<h1>Tomás Silva</h1>
+					<p class="major">Welcome to my profile page. My name is up there so you already know. I'm a programmer with a lot of passion to game & engine development. I love working with shaders, physics & gameplay.</p>
+				</div>
+				<div class="image">
+					<img src="images/banner.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Two -->
+			<section class="wrapper color5 invert style1 align-center">
+				<div class="inner">
+					<h2>A little more about me</h2>
+					<p>I'm a <span id="idade"></span> years old programmer and I want to work with games in gameplay, graphics/shaders & physics but I can do other stuff like AI, Tools, Animations, etc. I made some games, 2 in the terminal & 1 in <a href="https://threejs.org/">three.js</a>.</p>
+					<p>I really want to work not only in game dev as game/gameplay developer but work with low code & shaders language(HLSL, GLSL, DirectX, PlaySation, etc) as well.</p>
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section class="spotlight color1 invert style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+				<div class="content">
+					<h2>GameCG</h2>
+					<p>This is a game that I "make" for the college. It's a RPG game made in three.js and this game was a two-way thing. It is a two-way thing because this game was already made for learning purpose & at the same time I take that game & change it. This game was made by <a href="https://github.com/simondevyoutube/">simondevyoutube</a>. In github I have a list of what I change in the game.</p>
+					<ul class="actions stacked">
+						<li><a href="https://github.com/TomDev03/GameCG" class="button">See More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight01.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Four -->
+			<section class="spotlight color5 invert style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<div class="content">
+					<h2>Hanabi</h2>
+					<p>This is a cooperate card game which you have to cooperate with the other people in the game. This game is diferent from other games because games are typically competitive. But in this game when you lose all lose. So you have to cooperate to all of you win the game. This game can be played with 2 or 4 players.</p>
+					<ul class="actions stacked">
+						<li><a href="https://github.com/TomDev03/hanabi" class="button">See More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight02.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Five -->
+			<section class="spotlight color1 invert style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<div class="content">
+					<h2>Sopa de Letras</h2>
+					<p>Sopa de Letras is a game which you have a soup of letters. In this soup you have words in some directions. Depending on the algortithm you have left-to-right, top-to-bottom, right-to-left, bottom-to-top and in the diagonals. The objective is to find all the words in the soup.</p>
+					<ul class="actions stacked">
+						<li><a href="https://github.com/TomDev03/Sopa_de_Letras" class="button">See More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight03.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Footer -->
+			<footer class="wrapper color1 invert style1 align-center">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://twitter.com/Def4ult03" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/tom%C3%A1s-silva-932a59139/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/TomDev03" class="icon brands style2 fa-github"><span class="label">LinkedIn</span></a></li>
+					</ul>
+					<p>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+				</div>
+			</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+	</body>
 </html>
