--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</ul>
 				</div>
 				<div class="image">
-					<img src="images/spotlight01.jpg" alt="" />
+					<img src="images/gameCG.png" alt="" />
 				</div>
 			</section>
 
@@ -61,7 +61,7 @@
 					</ul>
 				</div>
 				<div class="image">
-					<img src="images/spotlight02.jpg" alt="" />
+					<img src="images/hanabi.png" alt="" />
 				</div>
 			</section>
 
@@ -75,7 +75,7 @@
 					</ul>
 				</div>
 				<div class="image">
-					<img src="images/spotlight03.jpg" alt="" />
+					<img src="images/SopaDeLetras.png" alt="" />
 				</div>
 			</section>
 
