Add CV download option

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 				<div class="content">
 					<h1>Tomás Silva</h1>
 					<p class="major">Welcome to my profile page. My name is up there so you already know. I'm a programmer with a lot of passion to game & engine development. I love working with shaders, physics & gameplay.</p>
+					<ul class="actions stacked">
+						<li>
+							<a href="./CV.pdf" type="application/x-please-download-me" target="_blank" class="button icon solid fa-download">Download CV</a>
+						</li>
+					</ul>
 				</div>
 				<div class="image">
 					<img src="images/banner.jpg" alt="" />
