--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<h2>A little more about me</h2>
 					<p>I'm a <span id="idade"></span> years old programmer and I want to work with games in gameplay, graphics/shaders & physics but I can do other stuff like AI, Tools, Animations, etc. I made some games, 2 in the terminal & 1 in <a href="https://threejs.org/">three.js</a>.</p>
 					<p>I really want to work not only in game dev as game/gameplay developer but work with low code & shaders language(HLSL, GLSL, DirectX, PlayStation, etc) as well.</p>
-					<p>Currently I am making on a mobile game in unity & I have a plan to make a game in UE5 which already have a little bit of story.</p>
+					<p>Currently I am making a mobile game in unity & I have a plan to make a game in UE5 which already have a little bit of story.</p>
 				</div>
 			</section>
 
