grammatically errors fixes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<section class="banner color1 invert style3 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 				<div class="content">
 					<h1>Tomás Silva</h1>
-					<p class="major">Welcome to my profile page. My name is up there so you already know. I'm a programmer with a lot of passion to game & engine development. I love working with shaders, physics & gameplay.</p>
+					<p class="major">Welcome to my profile page. My name is up there, so you already know. I'm a programmer with a lot of passion for game & engine development. I love working with shaders, physics & gameplay.</p>
 					<ul class="actions stacked">
 						<li>
 							<a href="./CV.pdf" type="application/x-please-download-me" target="_blank" class="button icon solid fa-download">Download CV</a>
@@ -37,8 +37,8 @@
 			<section class="wrapper color5 invert style1 align-center">
 				<div class="inner">
 					<h2>A little more about me</h2>
-					<p>I'm a <span id="idade"></span> years old programmer and I want to work with games in gameplay, graphics/shaders & physics but I can do other stuff like AI, Tools, Animations, etc. I made some games, 2 in the terminal & 1 in <a href="https://threejs.org/">three.js</a>.</p>
-					<p>I really want to work not only in game dev as game/gameplay developer but work with low code & shaders language(HLSL, GLSL, DirectX, PlayStation, etc) as well.</p>
+					<p>I'm a <span id="idade"></span>-year-old programmer who wants to work with games in gameplay, graphics/shaders & physics but I can do other stuff like AI, Tools, Animations, etc. I made some games, 2 in the terminal & 1 in <a href="https://threejs.org/">three.js</a>.</p>
+					<p>I want to work not only in-game dev as a game/gameplay developer but also with low code & shaders language(HLSL, GLSL, DirectX, PlayStation, etc...) as well.</p>
 				</div>
 			</section>
 
@@ -46,7 +46,7 @@
 			<section class="spotlight color1 invert style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 				<div class="content">
 					<h2>GameCG</h2>
-					<p>This is a game that I "make" for the college. It's a RPG game made in three.js and this game was a two-way thing. It is a two-way thing because this game was already made for learning purpose & at the same time I take that game & change it. This game was made by <a href="https://github.com/simondevyoutube/">simondevyoutube</a>. In github I have a list of what I change in the game.</p>
+					<p>GameCG is a game that I "made" for college. It's an RPG game made in three.js, and this game was a two-way thing. This game is for a learning purpose, so I took it and changed it. That is why it is a two-way thing. It's a game made by <a href="https://github.com/simondevyoutube/">simondevyoutube</a>. In GitHub, you can find a list of what I have changed in the game.</p>
 					<ul class="actions stacked">
 						<li><a href="https://github.com/TomDev03/GameCG" class="button">See More</a></li>
 					</ul>
@@ -60,7 +60,7 @@
 			<section class="spotlight color5 invert style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 				<div class="content">
 					<h2>Hanabi</h2>
-					<p>This is a cooperate card game which you have to cooperate with the other people in the game. This game is diferent from other games because games are typically competitive. But in this game when you lose all lose. So you have to cooperate to all of you win the game. This game can be played with 2 or 4 players.</p>
+					<p>Hanabi is a cooperative card game in which you have to cooperate with the other people in the game. This game is different from other games because games are typically competitive. But in this game, when you lose, everyone loses. So you have to cooperate to all of you win the game. You can play this game with 2 or 4 players.</p>
 					<ul class="actions stacked">
 						<li><a href="https://github.com/TomDev03/hanabi" class="button">See More</a></li>
 					</ul>
@@ -74,7 +74,7 @@
 			<section class="spotlight color1 invert style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 				<div class="content">
 					<h2>Sopa de Letras</h2>
-					<p>Sopa de Letras is a game which you have a soup of letters. In this soup you have words in some directions. Depending on the algortithm you have left-to-right, top-to-bottom, right-to-left, bottom-to-top and in the diagonals. The objective is to find all the words in the soup.</p>
+					<p>Sopa de Letras is a game in which you have a soup of letters. In this soup, you have words in some directions. Depending on the algorithm, you have left-to-right, top-to-bottom, right-to-left, bottom-to-top, and diagonals. The objective is to find all the words in the soup.</p>
 					<ul class="actions stacked">
 						<li><a href="https://github.com/TomDev03/Sopa_de_Letras" class="button">See More</a></li>
 					</ul>
