--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<p class="major">Welcome to my profile page. My name is up there, so you already know. I'm a programmer with a lot of passion for game & engine development. I love working with shaders, physics & gameplay.</p>
 					<ul class="actions stacked">
 						<li>
-							<a href="./CV.pdf" type="application/x-please-download-me" target="_blank" class="button icon solid fa-download">Download CV</a>
+							<a href="./CV.pdf" id="cv" type="application/x-please-download-me" target="_blank" class="button icon solid fa-download">Download CV</a>
 						</li>
 					</ul>
 				</div>
@@ -100,6 +100,13 @@
 		</div>
 
 		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 		<script type="module">
 			// Import the functions you need from the SDKs you need
 			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js";
@@ -122,13 +129,13 @@
 			// Initialize Firebase
 			const app = initializeApp(firebaseConfig);
 			const analytics = getAnalytics(app);
+
+			$("#cv").on("click", function(){
+				gtag("event", "file_download_cv", {
+					event_name: "cv_download",
+				})
+				//analytics.SendEvent("cv_download", Null);
+			})
 		</script>
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
 	</body>
 </html>
