Change About me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<h2>A little more about me</h2>
 					<p>I'm a <span id="idade"></span>-year-old programmer who wants to work with games in gameplay, graphics/shaders & physics but I can do other stuff like AI, Tools, Animations, etc. I made some games, 2 in the terminal & 1 in <a href="https://threejs.org/">three.js</a>.</p>
 					<p>I want to work not only in game development as a game/gameplay developer but also with low code & shaders language(HLSL, GLSL, DirectX, PlayStation, etc...) as well.</p>
-					<p>I'm currently making a mobile game on Unity, and I plan to make a game on UE5 that already has a bit of story.</p>
+					<p>I'm currently making a PC game on Godot</p>
 				</div>
 			</section>
 
